# hoprd

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  EXTRACTION_PLAN.md  README.md  SETUP_LOCAL_CLUSTER.md  crates.js  flake.nix  help.html  index-old.html  rust-toolchain-nightly.toml  settings.html  src-files.js
.cargo/: audit.toml  config.toml
.claude/: INSTRUCTIONS.md
.github/: actionlint.yaml  labeler.yml
.github/workflows/: merge.yaml  pr.yaml  release.yaml
deploy/compose/: README.md  docker-compose.yml
deploy/docker/: docker-entrypoint.sh
deploy/nfpm/: hoprd-sample.cfg.yaml  hoprd.service  nfpm.yaml
docs/localcluster/: README.md  latency-investigation.md
hopr-admin/: connection.js
hopr-admin/components/: balance.js  connected-peers.js  log.js
hopr-admin/pages/: index.js
hopr-admin/styles/: Home.module.css  connected-peers.module.css  globals.css  log.module.css
hoprd/: Cargo.toml  all.html  enum.HoprdProcess.html  example_cfg.yaml  fn.init_rest_api.html  fn.main_inner.html  fn.update_hopr_lib_config_from_env_vars.html  index.html  sidebar-items.js  type.HoprBlokliConnector.html  type.HoprNode.html  type.SharedTicketManager.html
hoprd/cli/: constant.DEFAULT_API_HOST.html  constant.DEFAULT_API_PORT.html  constant.MINIMAL_API_TOKEN_LENGTH.html  constant.SESSION_LISTEN_HOST_AUTO.html  fn.detect_local_ipv4.html  fn.parse_api_token.html  fn.parse_host.html  fn.parse_session_listen_host.html  fn.resolve_session_listen_host.html  index.html  sidebar-items.js  struct.CliArgs.html
hoprd/config/: constant.DEFAULT_HOST.html  constant.DEFAULT_PORT.html  fn.build_mixer_cfg_from_env.html  fn.default_blokli_url.html  fn.default_host.html  fn.default_max_sessions.html  fn.default_outgoing_ticket_winning_prob.html  fn.default_probe_interval.html  fn.default_probe_recheck_threshold.html  fn.default_session_establish_max_retries.html  fn.default_session_idle_timeout.html  fn.is_private_key.html  fn.just_true.html  fn.validate_file_path.html  fn.validate_identity_source.html  fn.validate_optional_private_key.html  fn.validate_password.html  fn.validate_private_key.html  index.html  sidebar-items.js  struct.Db.html  struct.HoprdConfig.html  struct.Identity.html  struct.UserHoprLibConfig.html  struct.UserHoprNetworkConfig.html
hoprd/src/: cli.rs  config.rs  jemalloc_stats.rs  lib.rs  main.rs  strategy.rs  telemetry.rs  telemetry_common.rs
hoprd/strategy/: enum.StrategyKind.html  fn.build_strategies.html  fn.build_strategies_inner.html  fn.empty_strategies.html  fn.hopr_default_strategies.html  fn.just_true.html  fn.sixty_seconds.html  fn.validate_execution_interval.html  index.html  sidebar-items.js  struct.METRIC_ENABLED_STRATEGIES.html  struct.MultiStrategyConfig.html
hoprd_api/: all.html  constant.BASE_PATH.html  enum.ApiErrorStatus.html  fn.build_api.html  fn.checksum_address_serializer.html  fn.explicit_path_router.html  fn.serve_api.html  index.html  sidebar-items.js  struct.ApiDoc.html  struct.ApiError.html  struct.AppState.html  struct.BaseApiDoc.html  struct.ExplicitPathApiDoc.html  struct.InternalState.html  struct.RestApiParameters.html  struct.SecurityAddon.html  trait.HoprNode.html  trait.RestApiSessionFactory.html  type.MessageEncoder.html
hoprd_api/account/: fn.addresses.html  fn.balances.html  fn.withdraw.html  index.html  sidebar-items.js  struct.AccountAddressesResponse.html  struct.AccountBalancesResponse.html  struct.WithdrawBodyRequest.html  struct.WithdrawResponse.html
hoprd_api/channels/: enum.ChannelDirection.html  fn.channel_to_topology_info.html  fn.close_channel.html  fn.filter_open_channel.html  fn.fund_channel.html  fn.list_channels.html  fn.open_channel.html  fn.resolve_channel.html  fn.show_channel.html  index.html  sidebar-items.js  struct.AddressParams.html  struct.ChannelDirectionQuery.html  struct.ChannelInfoResponse.html  struct.ChannelsQueryRequest.html  struct.CloseChannelResponse.html  struct.FundBodyRequest.html  struct.FundChannelResponse.html  struct.NodeChannel.html  struct.NodeChannelsResponse.html  struct.OpenChannelBodyRequest.html  struct.OpenChannelResponse.html
hoprd_api/checks/: fn.eligiblez.html  fn.eval_precondition.html  fn.healthyz.html  fn.is_chain_available.html  fn.is_minimally_connected.html  fn.is_running.html  fn.readyz.html  fn.startedz.html  index.html  sidebar-items.js
hoprd_api/config/: constant.DEFAULT_API_HOST.html  constant.DEFAULT_API_PORT.html  constant.MINIMAL_API_TOKEN_LENGTH.html  enum.Auth.html  (+5 more)
hoprd_api_schema/: all.html  fn.main.html  index.html
hoprd_cfg/: all.html  fn.main.html  fn.validate_effective_config.html  index.html  sidebar-items.js  struct.CliArgs.html
localcluster/: Cargo.toml  docker-compose.yml
localcluster/src/: blokli_helper.rs  cli.rs  client_helper.rs  control.rs  identity.rs  latency.rs  lib.rs  lock.rs  main.rs  relay.rs  summary.rs
localcluster/tests/: smoke.rs  throughput.rs
profiling/: FINDINGS.md  JEPROF-VM-USAGE.md  PROFILING_VM.md  analyze_memory.sh  findings_to_pdf.sh  jeprof-vm-usage.md  jeprof-vm.sh  jeprof_plot.py  memory-profiling.md  profiling_vm.md  session_loop.py  test-jeprof.sh
rest-api/: Cargo.toml
rest-api-client/: Cargo.toml  build.rs
rest-api/.cargo/: config
rest-api/src/: account.rs  channels.rs  checks.rs  config.rs  lib.rs  network.rs  node.rs  peers.rs  root.rs  session.rs  testing.rs  tickets.rs
rest-api/src/middleware/: auth.rs  mod.rs  prometheus.rs
scripts/: jeprof-vm.sh
search.index/: 004b42cd84.js  009b0a6bf2.js  031d84bd57.js  04cfadc457.js  06652e6f2a.js  06a6ba6e85.js  0730a49f33.js  075c768f8a.js  077d056290.js  078df6c77f.js  07f0d6a8d0.js  08d1a07fb5.js  0a15d8a015.js  0af6fe8239.js  0bbe828afd.js  0bed3ef379.js  0c9afe7f77.js  0d6560e65e.js  0ee5a1fa3f.js  0f23fcbdf4.js  0f422ebbae.js  0f4d0c2250.js  0fbe1ceb23.js  10da698b27.js  11a39d26a5.js  11b52c18d8.js  11fc6bab61.js  129343888a.js  12a6e9ef8c.js  133faf86ca.js  14f453d359.js  157be1d919.js  15efe4d302.js  15f0ef5735.js  15f8a27be1.js  1646d3c3ae.js  16c4da31a5.js  1739092601.js  1772ecb24a.js  17897f2b90.js  (+146 more)
(+173 files in other folders)
