[package]
name = "hoprd-localcluster"
version = "0.2.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Local HOPR cluster runner using external hoprd processes"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
hoprd = { workspace = true, features = [
  "runtime-tokio",
  "telemetry",
  "transport-quic",
] }
hopr-chain-connector = { workspace = true }
hopr-strategy = { workspace = true, features = [
  "runtime-tokio",
  "strategy-auto-redeeming",
  "strategy-channel-lifecycle",
] }
hopr-lib = { workspace = true }
hopr-node = { workspace = true, features = [
  "runtime-tokio",
  "session-server",
] }
hoprd-api-client = { workspace = true }
hoprd-api = { workspace = true }
lazy_static = { workspace = true }
nix = { workspace = true, features = ["fs", "signal"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }
