[package]
name = "hoprd-api"
version = "4.11.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "API enabling developers to interact with a hoprd node programatically through HTTP REST API."
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = ["telemetry", "runtime-tokio"]
telemetry = ["hopr-lib/telemetry", "dep:lazy_static", "dep:regex"]
runtime-tokio = ["hopr-lib/runtime-tokio"]

[dependencies]
axum = { workspace = true }
human-bandwidth = { workspace = true }
base64 = { workspace = true }
bytesize = { workspace = true }
const_format = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-swagger-ui = { workspace = true }
validator = { workspace = true }

hopr-lib = { workspace = true, features = [
  "serde",
  "session-client",
  "utils_futures",
] }

hopr-utils-session = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rstest = { workspace = true }
async-trait = { workspace = true }
bimap = { workspace = true }
futures = { workspace = true }
mockall = { workspace = true }
oas3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { workspace = true, features = ["util"] }

hopr-lib = { workspace = true, features = ["session-server"] }
